--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geostyler": "^9.0.1",
     "geostyler-geojson-parser": "^1.0.1",
     "geostyler-legend": "^2.1.0",
+    "geostyler-qgis-parser": "^1.0.0",
     "geostyler-shapefile-parser": "^1.0.0",
     "geostyler-sld-parser": "^3.0.0",
     "geostyler-style": "^5.0.0",
